resources/css/app.css
/* Bootstrap core */
@import "bootstrap/dist/css/bootstrap.min.css";

/* DataTables Bootstrap 4 theme */
@import url('datatables.net-bs4');
@import url('datatables.net-buttons-bs4');
@import url('datatables.net-responsive-bs4');
@import "datatables.net-bs4/css/dataTables.bootstrap4.css";
@import "datatables.net-responsive-bs4/css/responsive.bootstrap4.css";

/* Stisla */
@import './style.css';
@import './components.css';
@import './custom.css';


/* Custom fonts and overrides */
@font-face {
   font-family: 'Inter Bold';
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/FuturaCyrillicMedium.ttf");
}

h1, h2, h3, h4, h5, h6 {
   font-family: 'Nunito', sans-serif;
   font-weight: bold;
}

body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

